# note_neatness_service

./: .gitignore  README.md  service_name  url.txt
src/: CMakeLists.txt  det_layout.hpp
src/ai_model/: mind_map_config.ini
src/base/: logging.cc
src/config/: config.ini  config_dev.ini  config_pre.ini  config_product.ini  config_test.ini
src/det_ge_mma_ctpn/: CMakeLists.txt  README.md  manifest.ini
src/det_ge_mma_ctpn/api/: CMakeLists.txt
src/det_ge_mma_ctpn/api/include/: config.hpp  det_ge_mma_ctpn.hpp  frame_state_detector.hpp
src/det_ge_mma_ctpn/api/src/: config.cpp  det_ge_mma_ctpn.cpp  frame_state_detector.cpp
src/det_ge_mma_ctpn/data/: argv.txt
src/det_ge_mma_ctpn/data/images/: filelist.sh  list.txt
src/det_ge_mma_ctpn/data/python/: README.md
src/det_ge_mma_ctpn/data/python/ctpn_utils/bbox/: bbox.c  nms.c
src/det_ge_mma_ctpn/data/python/ctpn_utils/dataset/: data_provider.py
src/det_ge_mma_ctpn/data/python/ctpn_utils/prepare/: split_label.py
src/det_ge_mma_ctpn/data/python/ctpn_utils/rpn_msr/: anchor_target_layer.py  proposal_layer.py
src/det_ge_mma_ctpn/data/python/ctpn_utils/text_connector/: detectors.py  text_connect_cfg.py  text_proposal_connector.py  text_proposal_connector_oriented.py  text_proposal_graph_builder.py
src/det_ge_mma_ctpn/data/python/main/: demo.py  det_layout.py  det_line.py  det_line_v1.0.py  mind_map_analyst.py  playground.ipynb  train.py
src/det_ge_mma_ctpn/data/python/nets/: model_train.py
src/det_ge_mma_ctpn/script_linux/: gen.sh  performance_run_gpu.sh
src/det_ge_mma_ctpn/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.cpp  det_ge_mma_ctpn.hpp  performance_testing.cpp
src/det_layout/: .gitignore  CMakeLists.txt  README.md  manifest.ini
src/det_layout/api/: CMakeLists.txt
src/det_layout/api/src/: det_layout.cpp
src/det_layout/cmake/: CheckDependencies.cmake
src/det_layout/data/: argv.txt  config.ini
src/det_layout/data/images/: filelist.sh  list.txt
src/det_layout/script_linux/: gen.sh  performance_run_cpu.sh  performance_run_gpu.sh
src/det_layout/script_win/: gen.bat  get3rdParty.bat  performance_run_cpu.bat  performance_run_gpu.bat  upload_toftp.bat
src/det_layout/test/: CMakeLists.txt  demo.cpp  performance_testing.cpp
src/eureka/: CMakeLists.txt  eureka_client.cpp  eureka_client.h
src/grpc/: CMakeLists.txt
src/scripts/: ReadMe.txt  build.sh  install.sh  pythonrequirements.txt  requirments.sh
